# madoka-server

./: .gitignore  ChangeLog.txt  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac
include/: default.h  helper.h
libltdl/: .gitignore
m4/: ax_pthread.m4
modules/: Makefile.am  Makefile.in  modules.list  tcp.c
scripts/: Makefile.am  Makefile.in  gen_module_list.c
src/: Makefile.am  Makefile.in  main.c
